Final merge, everything working.

--- a/GotMoney.ipynb
+++ b/GotMoney.ipynb
@@ -622,7 +622,7 @@
     "gov_data.NTMAJ10.unique()\n",
     "\n",
     "#Create dataframe to use for pie chart creation from original datasource\n",
-    "gov_data_ntmaj10 = gov_data"
+    "gov_data_ntmaj10 = gov_data\n"
    ]
   },
   {
@@ -637,15 +637,8 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "cell_type": "markdown",
    "metadata": {},
->>>>>>> piecleanup
    "source": [
     "##### Public Charity - NTEE Major Category Breakdown"
    ]
@@ -661,20 +654,7 @@
     "\n",
     "# count NTMAJ10 values for PC group level 1\n",
     "pc_ntmaj10_count = gov_data_ntmaj10_merged[\"Long_Name\"].value_counts() \n",
-    "pc_ntmaj10_count"
-   ]
-  },
-  {
-<<<<<<< HEAD
-   "cell_type": "markdown",
-=======
-   "cell_type": "code",
-   "execution_count": null,
->>>>>>> piecleanup
-   "metadata": {},
-   "source": [
-<<<<<<< HEAD
-    "##### Public Charity - NTEE Major Category Breakdown Pie Chart"
+    "pc_ntmaj10_count\n"
    ]
   },
   {
@@ -683,23 +663,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-=======
->>>>>>> piecleanup
     "#create pie chart \n",
     "# set colors\n",
     "colors = [\"#845D7D\",\"#6A6E91\",\"#8F4F62\",\"#298B8C\",\"#477E96\",\"#379576\",\"#5F9B5C\",\"#8B9C46\",\"#B89840\",\"#E09151\"]\n",
     "\n",
     "# set labels\n",
-    "ntmaj10_labels_pc = [\"Human Services\", \"Education\", \"Public Benefit\", \"Health\", \"Arts\", \n",
-    "                     \"Religion\", \"Environment\", \"International\", \"Mutual Benefit\", \"Unknown\"]\n",
+    "ntmaj10_labels_pc = [\"Human Services\", \"Education\", \"Public Benefit\", \"Health\", \"Arts\", \"Religion\", \"Environment\", \"International\", \"Mutual Benefit\", \"Unknown\"]\n",
     "\n",
     "# create pie chart\n",
-    "plt.pie(pc_ntmaj10_count, labels = ntmaj10_labels_pc, labeldistance = None, shadow = False, colors = colors, \n",
-    "        explode=(0,0,0,0,0,0,0,0,0,0), startangle = 90, autopct='%1.1f%%')\n",
+    "plt.pie(pc_ntmaj10_count, labels = ntmaj10_labels_pc, labeldistance = None, shadow = False, colors = colors, explode=(0,0,0,0,0,0,0,0,0,0), startangle = 90, autopct='%1.1f%%')\n",
     "plt.axis(\"equal\")\n",
     "\n",
     "# add legend, title, size\n",
-    "plt.legend(labels=ntmaj10_labels_pf, fontsize=14, loc=\"center right\", bbox_to_anchor=(1, 0, .5, 1))\n",
+    "plt.legend(labels=ntmaj10_labels_pc, fontsize=14, loc=\"center right\", bbox_to_anchor=(1, 0, .5, 1))\n",
     "plt.title(\"Public Charity - NTEE Major Category Breakdown\", y=1, weight='bold', size=14)\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(6,6)\n",
@@ -714,14 +690,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Apply filter whereLevel 1 is PF\n",
     "gov_data_level1_pf = gov_data_ntmaj10_merged[gov_data_ntmaj10_merged.LEVEL1 == \"PF\"]\n",
     "\n",
     "# count NTMAJ10 values for PF group level 1\n",
-    "pf_ntmaj10_count = gov_data_level1_pf[\"Long_Name\"].value_counts() \n",
+    "pf_ntmaj10_count = gov_data_level1_pf[\"Long_Name\"].value_counts()\n",
     "pf_ntmaj10_count"
    ]
   },
@@ -735,12 +713,10 @@
     "colors = [\"#8F4F62\",\"#845D7D\",\"#6A6E91\",\"#477E96\",\"#298B8C\",\"#379576\",\"#5F9B5C\",\"#8B9C46\",\"#B89840\",\"#E09151\"]\n",
     "\n",
     "# set labels\n",
-    "ntmaj10_labels_pf = [\"Public Benefit\", \"Human Services\", \"Education\", \"Arts\", \n",
-    "                     \"Health\", \"Religion\", \"Environment\", \"International\", \"Mutual Benefit\", \"Unknown\"]\n",
+    "ntmaj10_labels_pf = [\"Public Benefit\", \"Human Services\", \"Education\", \"Arts\", \"Health\", \"Religion\", \"Environment\", \"International\", \"Mutual Benefit\", \"Unknown\"]\n",
     "\n",
     "# create pie chart\n",
-    "plt.pie(pf_ntmaj10_count, labels = ntmaj10_labels_pf, labeldistance = None, shadow = False, colors = colors, \n",
-    "        explode=(0,0,0,0,0,0,0,0,0,0), startangle = 90, autopct='%1.1f%%')\n",
+    "plt.pie(pf_ntmaj10_count, labels = ntmaj10_labels_pf, labeldistance = None, shadow = False, colors = colors, explode=(0,0,0,0,0,0,0,0,0,0), startangle = 90, autopct='%1.1f%%')\n",
     "plt.axis(\"equal\")\n",
     "\n",
     "# add legend, title, size\n",
@@ -748,8 +724,6 @@
     "plt.title(\"Private Foundation - NTEE Major Category Breakdown\", y=1, weight='bold', size=14)\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(6,6)\n",
-    "\n",
-    "# show pie chart\n",
     "plt.show()"
    ]
   },
